--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Dra. Gabriela Angulo P&eacute;rez</title>
-    <meta content="La Dra. Gabriela Angulo Pérez es egresada de medicina del I.P.N., realizó la especialidad de Otorrinolaringología y Cirugía de Cabeza y cuello en la UNAM, en Centro Médico Nacional Siglo XXI (2013-2017), donde fue jefe de Residentes de Otorrinolaringología en el período 2016-2017 
-    Realizó adiestramiento en Cirugía de Cuello, en IMSS, 2017
-    Certificada por el Consejo Mexicano de Otorrinolaringología y Cirugía de Cabeza y cuello con vigencia Diciembre 2022,  número de registro ANP-2779/17. 
-    Miembro de la Sociedad de Otorrinolaringología y Cirugía de Cabeza y Cuello desde Octubre 2017, Federación Mexicana de la Voz desde Noviembre 2016
-    Actualmente laboro en el Hospital de Especialidades Centro Médico Nacional Siglo XXI en el servicio Otorrinolaringología y Cirugía de Cabeza y cuello" name="description" />
-    <meta content="oidos, nariz, garganta, otorrino, cabeza, cuello, cirugía,Otorrinolaringología" name="keywords" />
+    <title>Dr. Alfredo Ram&iacute;rez C&aacute;rdenaz</title>
+    <meta content="Como Médico Materno-Fetal (MFM) soy expertos en embarazos de alto riesgo,asi como en las mujeres embarazadas con problemas de salud crónicos.
+    También me especializo en mujeres que se enfrentan a problemas inesperados que desarrollan durante el embarazo, como el parto prematuro, sangrado o presión arterial alta.
+    Así como en diagnosticar defectos de nacimiento o problemas de crecimiento, con la finalidad de
+    comenzar el tratamiento antes del nacimiento, proporcionando monitoreo,
+    para apoyar a los bebés con el mejor cuidado posible hasta que estén listos para llegar al mundo y sus mamas." name="description" />
+    <meta content="embarazo,maternidad,ginecologo,ultrasonido estructural,alto riesgo" name="keywords" />
 
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon" />
@@ -40,14 +40,7 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet" />
-
-    <!-- =======================================================
-  * Template Name: MyResume - v4.7.0
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+    <link href="assets/css/style.css" rel="stylesheet" />    
   </head>
 
   <body>
@@ -61,14 +54,14 @@
           <li>
             <a
               target="_blank"
-              href="https://www.doctoralia.com.mx/gabriela-angulo-perez/otorrinolaringologo/naucalpan-de-juarez2"
+              href="https://www.doctoralia.com.mx/alfredo-ramirez-cardenas/ginecologo/benito-juarez"
               class="nav-link scrollto"
               ><i class="bx bx-plus-medical"></i>
               <span>Citas doctoralia</span></a
             >
           </li>
           <li>
-            <a href="mailto:apybag@hotmail.com" class="nav-link scrollto"
+            <a href="mailto:diagnosticoprenatalœ@outlook.com" class="nav-link scrollto"
               ><i class="bx bx-envelope"></i> <span>Correo</span></a
             >
           </li>
@@ -86,11 +79,12 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex flex-column justify-content-center">
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
-        <h1>Dra. Gabriela Angulo P&eacute;rez</h1>
+        <h1>Dr. Alfredo Ram&iacute;rez C&aacute;rdenaz</h1>
+        <h3>Instituto Nacional de Perinatolog&iacute;a, InPer.</h3>
         <p>
           <span
             class="typed"
-            data-typed-items="Otorrinolaringologa, Cirugía de Cabeza y Cuello"
+            data-typed-items="M&eacute;dico Materno Fetal, Ginecolog&iacute;a, Obstetricia"
           ></span>
         </p>
         <div class="social-links">
@@ -99,100 +93,79 @@
             href="https://g.page/cortaestanciadalinde?share"
             class="map"
             ><i class="bx bx-map"></i
-            ><span style="font-size: 12px"
-              >DALINDE Corta Estancia, Mier y Pesado 222, Consultorio 310, Col
-              Del Valle CDMX C.P. 03100</span
+            ><span style="font-size: 12px">Av. Dr. Vertiz 995 Consultorio 309 3er piso 
+              dr-alfredo-remirez-cardenas
+              <br />
+              Col. Narvarte Del Benito Ju&aacuterez</span
             ></a
           >
           <br />
           <a
             target="_blank"
-            href="https://api.whatsapp.com/send?phone=5215582515503"
+            href="https://api.whatsapp.com/send?phone=5215575633553"
             class=""
             ><i class="bx bxl-whatsapp"></i>
-            <span style="font-size: 12px"> 5582515503 </span>
+            <span style="font-size: 12px"> 55 7563 3553</span>
           </a>
           <br />
-          <a href="tel:5524549105" class=""
+          <a href="tel:5562845076" class=""
             ><i class="bx bx-phone"></i>
             <span style="font-size: 12px">
-              5524549105, 5547425959 ext. 5310
-            </span></a
-          >
-          
-          <br />
-          <br />
-          <a
-            target="_blank"
-            href="https://goo.gl/maps/ZvYKTGawR1zxmfXw8"
-            class="map"
-            ><i class="bx bx-map"></i
-            ><span style="font-size: 12px"
-              >Clínica de enfermedades respiratorias Circuito misioneros 4a, ciudad satélite, Naucalpan </span
-            ></a
-          >
-          <br />
-          <a href="tel:5547515151" class=""
-            ><i class="bx bx-phone"></i>
-            <span style="font-size: 12px">
-              5547515151
+              Tel: 55 6284 5076
             </span></a
           >
           <br />
-          <br />
-          <a
-            target="_blank"
-            href="https://goo.gl/maps/UfDA8HhQFbtWNhKv8"
-            class="map"
-            ><i class="bx bx-map"></i
-            ><span style="font-size: 12px"
-              >Clínica San Juanita, Decorado 133 colonia 20 de noviembre alcaldía Venustiano Carranza </span
-            ></a
-          >
-          <br />          
-          <a href="tel:5557027762" class=""
+          <a href="tel:5575633553" class=""
             ><i class="bx bx-phone"></i>
             <span style="font-size: 12px">
-              5557027762
+              Cel: 55 7563 3553
             </span></a
           >
-          
+          <br />
+          <a href="mailto:diagnosticoprenatalœ@outlook.com" class=""
+            ><i class="bx bx-mail-send"></i>
+            <span style="font-size: 12px">
+              diagnosticoprenatalœ@outlook.com
+            </span></a
+          >          
+          <br />
+          <br />
         </div>
         <div class="social-links">
           <h3>Compartir:</h3>
           <a
             target="_blank"
-            href="mailto:info@example.com?&amp;subject=&amp;cc=&amp;bcc=&amp;body=https://bussinesshmv.github.io/dra-grabriela-angulo/"
+            href="mailto:info@example.com?&amp;subject=&amp;cc=&amp;bcc=&amp;body=https://bussinesshmv.github.io/dr-alfredo-remirez-cardenas/"
             ><i class="bx bx-mail-send"></i
           ></a>          
           <a
             target="_blank"
-            href="whatsapp://send/?text=%20https://bussinesshmv.github.io/dra-grabriela-angulo/"
+            href="whatsapp://send/?text=%20https://bussinesshmv.github.io/dr-alfredo-remirez-cardenas/"
             ><i class="bx bxl-whatsapp"></i
           ></a>
           <a
             target="_blank"
-            href="https://facebook.com/sharer/sharer.php?u=https://bussinesshmv.github.io/dra-grabriela-angulo/"
+            href="https://facebook.com/sharer/sharer.php?u=https://bussinesshmv.github.io/dr-alfredo-remirez-cardenas/"
             ><i class="bx bxl-facebook"></i
           ></a>
           <a
             target="_blank"
-            href="https://twitter.com/intent/tweet/?text=&amp;url=https://bussinesshmv.github.io/dra-grabriela-angulo/"
+            href="https://twitter.com/intent/tweet/?text=&amp;url=https://bussinesshmv.github.io/dr-alfredo-remirez-cardenas/"
             ><i class="bx bxl-twitter"></i
           ></a>
           <a
             target="_blank"
-            href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https://bussinesshmv.github.io/dra-grabriela-angulo/"
+            href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https://bussinesshmv.github.io/dr-alfredo-remirez-cardenas/"
             ><i class="bx bxl-linkedin"></i
           ></a>
           <a
             target="_blank"
-            href="https://telegram.me/share/url?text=&url=https://bussinesshmv.github.io/dra-grabriela-angulo/"
+            href="https://telegram.me/share/url?text=&url=https://bussinesshmv.github.io/dr-alfredo-remirez-cardenas/"
             ><i class="bx bxl-telegram"></i
           ></a>
           <a
           target="_blank"
-          href="https://www.pinterest.com.mx/pin/create/button/?url=https://bussinesshmv.github.io/dra-grabriela-angulo/"
+          href="https://www.pinterest.com.mx/pin/create/button/?url=https://bussinesshmv.github.io/dr-alfredo-remirez-cardenas/"
           ><i class="bx bxl-pinterest"></i
         ></a>
           <a
