--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex flex-column justify-content-center">
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
-        <h1>Dr. Alfredo Ram&iacute;rez C&aacute;rdenaz</h1>
-        <h3>Instituto Nacional de Perinatolog&iacute;a, InPer.</h3>
+        <h1>Dr. Alfredo Ram&iacute;rez C&aacute;rdenas</h1>
+        <h4>Instituto Nacional de Perinatolog&iacute;a, InPer.</h4>
         <p>
           <span
             class="typed"
@@ -93,8 +93,7 @@
             href="https://g.page/cortaestanciadalinde?share"
             class="map"
             ><i class="bx bx-map"></i
-            ><span style="font-size: 12px">Av. Dr. Vertiz 995 Consultorio 309 3er piso 
-              dr-alfredo-remirez-cardenas
+            ><span style="font-size: 12px">Av. Dr. Vertiz 995 Consultorio 309 3er piso               
               <br />
               Col. Narvarte Del Benito Ju&aacuterez</span
             ></a
@@ -135,37 +134,37 @@
           <h3>Compartir:</h3>
           <a
             target="_blank"
-            href="mailto:info@example.com?&amp;subject=&amp;cc=&amp;bcc=&amp;body=https://bussinesshmv.github.io/dr-alfredo-remirez-cardenas/"
+            href="mailto:info@example.com?&amp;subject=&amp;cc=&amp;bcc=&amp;body=https://bussinesshmv.github.io/dr-alfredo-ramirez-cardenas/"
             ><i class="bx bx-mail-send"></i
           ></a>          
           <a
             target="_blank"
-            href="whatsapp://send/?text=%20https://bussinesshmv.github.io/dr-alfredo-remirez-cardenas/"
+            href="whatsapp://send/?text=%20https://bussinesshmv.github.io/dr-alfredo-ramirez-cardenas/"
             ><i class="bx bxl-whatsapp"></i
           ></a>
           <a
             target="_blank"
-            href="https://facebook.com/sharer/sharer.php?u=https://bussinesshmv.github.io/dr-alfredo-remirez-cardenas/"
+            href="https://facebook.com/sharer/sharer.php?u=https://bussinesshmv.github.io/dr-alfredo-ramirez-cardenas/"
             ><i class="bx bxl-facebook"></i
           ></a>
           <a
             target="_blank"
-            href="https://twitter.com/intent/tweet/?text=&amp;url=https://bussinesshmv.github.io/dr-alfredo-remirez-cardenas/"
+            href="https://twitter.com/intent/tweet/?text=&amp;url=https://bussinesshmv.github.io/dr-alfredo-ramirez-cardenas/"
             ><i class="bx bxl-twitter"></i
           ></a>
           <a
             target="_blank"
-            href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https://bussinesshmv.github.io/dr-alfredo-remirez-cardenas/"
+            href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https://bussinesshmv.github.io/dr-alfredo-ramirez-cardenas/"
             ><i class="bx bxl-linkedin"></i
           ></a>
           <a
             target="_blank"
-            href="https://telegram.me/share/url?text=&url=https://bussinesshmv.github.io/dr-alfredo-remirez-cardenas/"
+            href="https://telegram.me/share/url?text=&url=https://bussinesshmv.github.io/dr-alfredo-ramirez-cardenas/"
             ><i class="bx bxl-telegram"></i
           ></a>
           <a
           target="_blank"
-          href="https://www.pinterest.com.mx/pin/create/button/?url=https://bussinesshmv.github.io/dr-alfredo-remirez-cardenas/"
+          href="https://www.pinterest.com.mx/pin/create/button/?url=https://bussinesshmv.github.io/dr-alfredo-ramirez-cardenas/"
           ><i class="bx bxl-pinterest"></i
         ></a>
           <a
