--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="social-links">
           <a
             target="_blank"
-            href="https://g.page/cortaestanciadalinde?share"
+            href="https://goo.gl/maps/qfyrH3xUUMvA915Z7"
             class="map"
             ><i class="bx bx-map"></i
             ><span style="font-size: 12px">Av. Dr. Vertiz 995 Consultorio 309 3er piso               
