--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           >
           <br />
           <a href="tel:5575633553" class=""
-            ><i class="bx bx-phone"></i>
+            ><i class="bx bx-phone-call"></i>
             <span style="font-size: 12px">
               Cel: 55 7563 3553
             </span></a
