--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
             </span></a
           >
           <br />
-          <a href="mailto:diagnosticoprenatalœ@outlook.com" class=""
+          <a href="mailto:diagnosticoprenatal@outlook.com" class=""
             ><i class="bx bx-mail-send"></i>
             <span style="font-size: 12px">
-              diagnosticoprenatalœ@outlook.com
+              diagnosticoprenatal@outlook.com
             </span></a
           >          
           <br />
