--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Dr. Alfredo Ram&iacute;rez C&aacute;rdenaz</title>
-    <meta content="Como Médico Materno-Fetal (MFM) soy expertos en embarazos de alto riesgo,asi como en las mujeres embarazadas con problemas de salud crónicos.
-    También me especializo en mujeres que se enfrentan a problemas inesperados que desarrollan durante el embarazo, como el parto prematuro, sangrado o presión arterial alta.
-    Así como en diagnosticar defectos de nacimiento o problemas de crecimiento, con la finalidad de
-    comenzar el tratamiento antes del nacimiento, proporcionando monitoreo,
-    para apoyar a los bebés con el mejor cuidado posible hasta que estén listos para llegar al mundo y sus mamas." name="description" />
-    <meta content="embarazo,maternidad,ginecologo,ultrasonido estructural,alto riesgo" name="keywords" />
+    <title>MACSA</title>
+    <meta content="Nuestro sitio web de cristales y cancelería arquitectónica es tu destino definitivo para encontrar soluciones que superen tus expectativas y eleven tus proyectos al siguiente nivel. Convierte tus ideas en realidad con nuestra amplia gama de productos y servicios de primera calidad, respaldados por la experiencia de nuestro equipo de expertos." name="description" />
+    <meta content="laminados, Vidrios templados, Cristales a medida, Acristalamiento, Diseño de fachadas, Instalación de barandales, Vidrios de seguridad, Vidrios reflectantes, Ventilación Eurovent, Eficiencia energética, Mantenimiento de vidrios, Servicios de limpieza de cristales, Reparación de cancelería, Proyectos de vidrio personalizados, Innovación en vidrios arquitectónicos, Soluciones de vidrio sostenible, Diseño contemporáneo de cristalería." name="keywords" />
 
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon" />
@@ -40,14 +36,14 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet" />    
+    <link href="assets/css/style.css" rel="stylesheet" />
   </head>
 
   <body>
     <!-- ======= Mobile nav toggle button ======= -->
     <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
     <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
-    <!-- ======= Header ======= -->
+    <!-- ======= Header ======= 
     <header id="header" class="d-flex flex-column justify-content-center">
       <nav id="navbar" class="navbar nav-menu">
         <ul>
@@ -72,61 +68,44 @@
           </li>
         </ul>
       </nav>
-      <!-- .nav-menu -->
-    </header>
+    </header>-->
     <!-- End Header -->
 
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex flex-column justify-content-center">
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
-        <h1>Dr. Alfredo Ram&iacute;rez C&aacute;rdenas</h1>
-        <h4>Instituto Nacional de Perinatolog&iacute;a, InPer.</h4>
+        <h1>MACSA</h1>
+        <h4>Innovaci&oacute;n de proyectos en aluminio.</h4>
         <p>
           <span
             class="typed"
-            data-typed-items="M&eacute;dico Materno Fetal, Ginecolog&iacute;a, Obstetricia"
+            data-typed-items="Cristales, Canceler&iacute;a Arquitect&oacute;nica, Cristal templado, Fachadas, Barandales, L&iacute;nea Española, Eurovent, Mantenimiento en General"
           ></span>
         </p>
         <div class="social-links">
           <a
             target="_blank"
-            href="https://goo.gl/maps/qfyrH3xUUMvA915Z7"
+            href="https://goo.gl/maps/y4FhDBnChEHu6rGs5"
             class="map"
             ><i class="bx bx-map"></i
-            ><span style="font-size: 12px">Av. Dr. Vertiz 995 Consultorio 309 3er piso               
-              <br />
-              Col. Narvarte Del Benito Ju&aacuterez</span
+            ><span style="font-size: 12px">CDMX</span
             ></a
           >
           <br />
           <a
             target="_blank"
-            href="https://api.whatsapp.com/send?phone=5215575633553"
+            href="https://api.whatsapp.com/send?phone=5215537451701"
             class=""
             ><i class="bx bxl-whatsapp"></i>
-            <span style="font-size: 12px"> 55 7563 3553</span>
+            <span style="font-size: 12px"> 55 3745 1701</span>
           </a>
           <br />
-          <a href="tel:5562845076" class=""
-            ><i class="bx bx-phone"></i>
-            <span style="font-size: 12px">
-              Tel: 55 6284 5076
-            </span></a
-          >
-          <br />
-          <a href="tel:5575633553" class=""
-            ><i class="bx bx-phone-call"></i>
-            <span style="font-size: 12px">
-              Cel: 55 7563 3553
-            </span></a
-          >
-          <br />
-          <a href="mailto:diagnosticoprenatal@outlook.com" class=""
+          <a href="mailto:arturo_macsa2@hotmail.com" class=""
             ><i class="bx bx-mail-send"></i>
             <span style="font-size: 12px">
-              diagnosticoprenatal@outlook.com
+              arturo_macsa2@hotmail.com
             </span></a
-          >          
+          >
           <br />
           <br />
         </div>
@@ -134,37 +113,37 @@
           <h3>Compartir:</h3>
           <a
             target="_blank"
-            href="mailto:info@example.com?&amp;subject=&amp;cc=&amp;bcc=&amp;body=https://bussinesshmv.github.io/dr-alfredo-ramirez-cardenas/"
+            href="mailto:info@example.com?&amp;subject=&amp;cc=&amp;bcc=&amp;body=https://bussinesshmv.github.io/macsa/"
             ><i class="bx bx-mail-send"></i
-          ></a>          
+          ></a>
           <a
             target="_blank"
-            href="whatsapp://send/?text=%20https://bussinesshmv.github.io/dr-alfredo-ramirez-cardenas/"
+            href="whatsapp://send/?text=%20https://bussinesshmv.github.io/macsa/"
             ><i class="bx bxl-whatsapp"></i
           ></a>
           <a
             target="_blank"
-            href="https://facebook.com/sharer/sharer.php?u=https://bussinesshmv.github.io/dr-alfredo-ramirez-cardenas/"
+            href="https://facebook.com/sharer/sharer.php?u=https://bussinesshmv.github.io/macsa/"
             ><i class="bx bxl-facebook"></i
           ></a>
           <a
             target="_blank"
-            href="https://twitter.com/intent/tweet/?text=&amp;url=https://bussinesshmv.github.io/dr-alfredo-ramirez-cardenas/"
+            href="https://twitter.com/intent/tweet/?text=&amp;url=https://bussinesshmv.github.io/macsa/"
             ><i class="bx bxl-twitter"></i
           ></a>
           <a
             target="_blank"
-            href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https://bussinesshmv.github.io/dr-alfredo-ramirez-cardenas/"
+            href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https://bussinesshmv.github.io/macsa/"
             ><i class="bx bxl-linkedin"></i
           ></a>
           <a
             target="_blank"
-            href="https://telegram.me/share/url?text=&url=https://bussinesshmv.github.io/dr-alfredo-ramirez-cardenas/"
+            href="https://telegram.me/share/url?text=&url=https://bussinesshmv.github.io/macsa/"
             ><i class="bx bxl-telegram"></i
           ></a>
           <a
           target="_blank"
-          href="https://www.pinterest.com.mx/pin/create/button/?url=https://bussinesshmv.github.io/dr-alfredo-ramirez-cardenas/"
+          href="https://www.pinterest.com.mx/pin/create/button/?url=https://bussinesshmv.github.io/macsa/"
           ><i class="bx bxl-pinterest"></i
         ></a>
           <a
