--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
     <section id="hero" class="d-flex flex-column justify-content-center">
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
         <h1>MACSA</h1>
-        <h4>Innovaci&oacute;n de proyectos en aluminio.</h4>
+        <h4 >CEO Arturo Francisco Macedo Segovia</h4>
+        <h6>Innovaci&oacute;n de proyectos en aluminio.</h6>
         <p>
           <span
             class="typed"
@@ -88,7 +89,7 @@
             href="https://goo.gl/maps/y4FhDBnChEHu6rGs5"
             class="map"
             ><i class="bx bx-map"></i
-            ><span style="font-size: 12px">CDMX</span
+            ><span style="font-size: 12px">C D M X</span
             ></a
           >
           <br />
