--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <section id="hero" class="d-flex flex-column justify-content-center">
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
         <h1>MACSA</h1>
+        <img src="assets/img/logo.png" alt="MASCA"  style="width: 150px; border-radius: 50%;"/>
         <h4 >CEO Arturo Francisco Macedo Segovia</h4>
         <h6>Innovaci&oacute;n de proyectos en aluminio.</h6>
         <p>
