--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex flex-column justify-content-center">
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
-        <h1>MACSA</h1>
-        <img src="assets/img/logo.png" alt="MASCA"  style="width: 150px; border-radius: 50%;"/>
-        <h4 >CEO Arturo Francisco Macedo Segovia</h4>
-        <h6>Innovaci&oacute;n de proyectos en aluminio.</h6>
+        <img src="assets/img/logo.png" alt="MASCA"  style="border-radius: 15px;"/>
+        <br />
+        <br />
+        <h2 >CEO Arturo Francisco Macedo Segovia</h2>
+        <h4>Innovaci&oacute;n de proyectos en aluminio.</h4>
         <p>
           <span
             class="typed"
