--- a/index.html
+++ b/index.html
@@ -77,8 +77,11 @@
         <img src="assets/img/logo.png" alt="MASCA"  style="border-radius: 15px;"/>
         <br />
         <br />
-        <h2 >CEO Arturo Francisco Macedo Segovia</h2>
-        <h4>Innovaci&oacute;n de proyectos en aluminio.</h4>
+        <h3>C E O </h3>
+        <h2 >Arturo Francisco Macedo Segovia</h2>
+        <br />
+        <br />
+        <h4>Innovaci&oacute;n de Proyectos en Aluminio</h4>
         <p>
           <span
             class="typed"
