--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
           <br />
           <a
             target="_blank"
-            href="https://api.whatsapp.com/send?phone=5215537451701"
+            href="https://api.whatsapp.com/send?phone=5215537454701"
             class=""
             ><i class="bx bxl-whatsapp"></i>
-            <span style="font-size: 12px"> 55 3745 1701</span>
+            <span style="font-size: 12px"> 55 37 45 47 01</span>
           </a>
           <br />
-          <a href="mailto:arturo_macsa2@hotmail.com" class=""
+          <a href="mailto:mailto:contacto@macsa.website" class=""
             ><i class="bx bx-mail-send"></i>
             <span style="font-size: 12px">
-              arturo_macsa2@hotmail.com
+              mailto:contacto@macsa.website
             </span></a
           >
           <br />
