--- a/index.html
+++ b/index.html
@@ -113,7 +113,12 @@
             </span></a
           >
           <br />
-          <br />
+          <a href="https://macsa.website/" target="_blank" class=""
+            ><i class="bx bx-globe"></i>
+            <span style="font-size: 12px">
+              https://macsa.website/
+            </span></a
+          >
         </div>
         <div class="social-links">
           <h3>Compartir:</h3>
@@ -152,12 +157,14 @@
           href="https://www.pinterest.com.mx/pin/create/button/?url=https://bussinesshmv.github.io/macsa/"
           ><i class="bx bxl-pinterest"></i
         ></a>
-          <a
+        <a
             target="_blank"
             href="assets/img/qr-code.png"
             ><i class="bx bx-qr-scan"></i
           ></a>
         </div>
+        <br />    <br />    <br />
+
       </div>
     </section>
     <!-- End Hero -->
@@ -189,12 +196,10 @@
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
-      
         <div class="copyright">
           &copy; Copyright <strong><a href="https://hmvsoluciones.com">HMV Soluciones</a></strong
           >
         </div>
-        
       </div>
     </footer>
     <!-- End Footer -->
